# wiggle-SAXS

./: .gitignore  README.md  pyproject.toml
example/: wiggle_scattering_notebook.ipynb
tests/: test_fitting.py  test_structure.py
wiggle/: __init__.py  api.py  cli.py  fitting.py  plotting.py  scattering.py  structure.py
wiggle/data/: wiggle_implicit_form_factors.pkl
